tests/ui/const-generics/mgca/free-type-alias-recursive.stderr
error[E0271]: type mismatch resolving `A normalizes-to _`
  --> $DIR/free-type-alias-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^ types differ

error: the constant `A` is not of type `()`
  --> $DIR/free-type-alias-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^ expected `()`, found a different `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
